--- a/app/assets/stylesheets/groups.scss
+++ b/app/assets/stylesheets/groups.scss
@@ -36,13 +36,13 @@
 
 @mixin orange-blue-split($opacity){
   background: rgba(234,133,17,1);
-  background: -moz-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(0,0,255,0.8) 51%, rgba(0,0,255,$opacity) 100%);
-  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(234,133,17,1)), color-stop(49%, rgba(234,133,17,0.8)), color-stop(51%, rgba(0,0,255,0.8)), color-stop(100%, rgba(0,0,255,$opacity)));
-  background: -webkit-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(0,0,255,0.8) 51%, rgba(0,0,255,$opacity) 100%);
-  background: -o-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(0,0,255,0.8) 51%, rgba(0,0,255,$opacity) 100%);
-  background: -ms-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(0,0,255,0.8) 51%, rgba(0,0,255,$opacity) 100%);
-  background: linear-gradient(to bottom, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(0,0,255,0.8) 51%, rgba(0,0,255,$opacity) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ea8511', endColorstr='#0000ff', GradientType=0 );
+  background: -moz-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(27,117,187,0.8) 51%, rgba(27,117,187,$opacity) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(234,133,17,1)), color-stop(49%, rgba(234,133,17,0.8)), color-stop(51%, rgba(27,117,187,0.8)), color-stop(100%, rgba(27,117,187,$opacity)));
+  background: -webkit-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(27,117,187,0.8) 51%, rgba(27,117,187,$opacity) 100%);
+  background: -o-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(27,117,187,0.8) 51%, rgba(27,117,187,$opacity) 100%);
+  background: -ms-linear-gradient(top, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(27,117,187,0.8) 51%, rgba(27,117,187,$opacity) 100%);
+  background: linear-gradient(to bottom, rgba(234,133,17,1) 0%, rgba(234,133,17,0.8) 49%, rgba(27,117,187,0.8) 51%, rgba(27,117,187,$opacity) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ea8511', endColorstr='#1b75bb', GradientType=0 );
 }
 
 .marker-cluster div {
@@ -59,12 +59,12 @@
 }
 
 .marker-cluster-up, .more-ones {
-  background-color: rgba(253, 156, 115, 0.6);
+  background-color: rgba(234,133,17, 0.6);
   div { background-color: rgba(241, 128, 23, 0.6); }
 }
 
 .marker-cluster-down, .more-zeroes { 
-  background-color: rgba(27, 117, 187, 0.6); 
+  background-color: rgba(27,117,187, 0.6); 
   div { background-color: rgba(27, 117, 187, 0.6); }
 }
 
